<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="title_activity_details">Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="infos">TextView</string>
    <string name="info2">info2</string>
    <string name="username">personName</string>
    <string name="contentDescription">Profile pictures</string>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="locationOn">Saint Pierre du mont à 5km</string>
    <string name="phonenumber">+33 6 86 57 90 14</string>
    <string name="fb">www.facebook.fr/caroline</string>
    <string name="about">A propos de moi</string>
    <string name="aboutme">Bonjour ! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m\'accompagner ! J\'aime des jeux de cartes tels la belote et le tarot..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
